--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,7 @@
 [build]
   command = "npm run build"
   publish = "dist"
-  
-[build.environment]
-  NODE_VERSION = "18.18.0"
-  NPM_VERSION = "9.8.0"
 
-[[plugins]]
-  package = "@netlify/plugin-inline-functions-env"
+[build.environment]
+  NODE_VERSION = "20.11.1"
+  NPM_FLAGS="--legacy-peer-deps"
